--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@ data/ngram_dependencies_adjectives_wide_normalized.csv
 images/decoder.png
 images/encoder.png
 images/model structure.pptx
+.gitignore
